[package]
name = "turbowish"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "Placeholder for the time being!"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/turbowish/turbowish"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
